Add more examples

--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 <script src="typograms.js"></script>
 <link rel="stylesheet" href="typograms.css"></link>
 
-<script>
-customElements.define("typo-gram", class Typogram extends HTMLElement {
-  constructor() {
-    super();
-  }
-  connectedCallback() {
-    console.log("hello");
-    console.log(this.innerHTML);
-  }
-});
-</script>
-
-<typo-gram>
-</typo-gram>
-
+<br>
 Line ends:
 <br>
 <script type="text/typogram">
@@ -26,7 +12,7 @@ o-  *-
 
 ^ ^  * o  |  |                           ^ ^ ^ ^             ^ ^ ^
 | |  ^ ^  v  v   *  o   ^ ^ ^ ^  | | | |  \ \ \ \  \ \ \ \  / / /  / / / /
-* o  | |  *  o   ^  ^  o * v     o * v     o * v    o * v  o * v  o * v 
+* o       *  o   ^  ^  o * v     o * v     o * v    o * v  o * v  o * v 
   
 <-o <-* <-> <-                   -o -* -> -- *<- o<- ->o ->*
 
@@ -72,4 +58,201 @@ Trees:
     B   C    A   B
 
 </script>
+
 <br>
+Big Shapes:
+<br>
+<script type="text/typogram">
+  +-----------+  ^  +------+        .-----.  +-----+     +----+       +----+
+   \         /  / \  \      \       |     |  |     |    /      \     /      \
+    \       /  /   \  \      \      |     |  |     |   /        \   /        \
+     \     /  /     \  \      \     |     |  |     |  +          + |          |
+      \   /  /       \  \      \    |     |  |     |   \        /   \        /
+       \ /  /         \  \      \   |     |  |     |    \      /     \      /
+        v  +-----------+  +------+  '-----'  +-----+     +----+       +----+
+</script>   
+
+<br>
+Small Shapes:
+<br>
+<script type="text/typogram">
+   __        ____     ___                     .---. 
+  /  \   /\  \  /  ^  \ /  /\   +-+  +-+ +-+  |   | ++ 
+  \__/  /__\  \/  /_\  v  /  \  +-+ /_/   \_\ '---' ++
+                         +----+
+</script>   
+
+<br>
+Big grids:
+<br>
+<script type="text/typogram">
+    +----+        +----+                                                                                                         
+   /      \      /      \            .-----+-----+-----.                                                                         
+  +        +----+        +----+      |     |     |     |          .-----+-----+-----+-----+                                      
+   \      /      \      /      \     |     |     |     |         /     /     /     /     /                                       
+    +----+        +----+        +    +-----+-----+-----+        +-----+-----+-----+-----+                                        
+   /      \      /      \      /     |     |     |     |       /     /     /     /     /
+  +        +----+        +----+      |     |     |     |      +-----+-----+-----+-----+
+   \      /      \      /      \     +-----+-----+-----+     /     /     /     /     /
+    +----+        +----+        +    |     |     |     |    +-----+-----+-----+-----+
+          \      /      \      /     |     |     |     |   /     /     /     /     /
+           +----+        +----+      '-----+-----+-----'  '-----+-----+-----+-----+
+</script>   
+
+<br>
+Small grids:
+<br>
+<script type="text/typogram">
+       ___     ___      .---+---+---+---+---.     .---+---+---+---.  .---.   .---. 
+   ___/   \___/   \     |   |   |   |   |   |    / \ / \ / \ / \ /   |   +---+   |
+  /   \___/   \___/     +---+---+---+---+---+   +---+---+---+---+    +---+   +---+
+  \___/   \___/   \     |   |   |   |   |   |    \ / \ / \ / \ / \   |   +---+   |
+  /   \___/   \___/     +---+---+---+---+---+     +---+---+---+---+  +---+   +---+
+  \___/   \___/   \     |   |   |   |   |   |    / \ / \ / \ / \ /   |   +---+   |
+      \___/   \___/     '---+---+---+---+---'   '---+---+---+---'    '---'   '---'
+</script>   
+
+<br>
+Dot grids:
+<br>
+<script type="text/typogram">
+  o o o o o    * * * * *    o * * * o     o o o       * * *    . * . . . 
+  o o o o o    * * * * *    * o o o *    o o o o     * * * *   . o . . .
+  o o o o o    * * * * *    o o o o *   o o o o o   * * * * *  . . . . .
+  o o o o o    * * * * *    * * * o o    o o o o     * * * *   . o o * .
+  o o o o o    * * * * *    o o o * *     o o o       * * *    . o o o o
+</script>   
+
+<br>
+Time series:
+<br>
+<script type="text/typogram">
+    E +-------------------------*--+     E |                         o
+    D |-------------------*--*--|--*     D |                   o  o  |  o
+    C |-------------*--*  |  |  |  |     C |             o  o  |  |  |  |
+    B |-------*--*  |  |  |  |  |  |     B |       o  o  |  |  |  |  |  |
+    A +-*--*--+--+--+--+--+--+--+--+     A +-o--o--|--|--|--|--|--|--|--|
+        5 10 15 20 25 30 35 40 45 50         5 10 15 20 25 30 35 40 45 50
+
+
+
+  85.67 ┤                                       ╭╮
+  78.20 ┤                                       ││                  ╭╮
+  70.73 ┤                                       ││  ╭╮ ╭╮ ╭╮   ╭╮  ╭╯╰─╮
+  63.27 ┤                        ╭╮         ╭─╮ ││ ╭╯╰╮│╰─╯╰╮╭╮│╰──╯   │╭
+  55.80 ┤   ╭╮                 ╭╮││╭╮ ╭╮╭╮  │ ╰─╯╰─╯  ││    ││││       ╰╯
+  48.33 ┤   │╰╮      ╭──╮      │││││╰╮│╰╯│  │         ╰╯    ╰╯╰╯
+  40.87 ┤╭╮ │ ╰╮╭╮  ╭╯  ╰─╮╭╮╭─╯╰╯╰╯ ╰╯  ╰──╯
+  33.40 ┤││ │  ╰╯╰╮╭╯     ││╰╯
+  25.93 ┤││╭╯     ╰╯      ╰╯
+  18.47 ┼╯││
+  11.00 ┤ ╰╯
+        └───────────┴───────────┴───────────┴───────────┴───────────┴────
+      2011        2012        2013        2014        2015        2016
+</script>   
+
+<br>
+Tables:
+<br>
+<script type="text/typogram">
++-----+---------+---------+
+| ID  | First   | Last    |
++-----+---------+---------+
+| 1   | Joe     | Doe     |
++-----+---------+---------+
+| 2   | Anna    | Merkle  |
++-----+---------+---------+
+</script>   
+
+<br>
+Icon diagrams:
+<br>
+<script type="text/typogram">
+    Sender                Mail Server              Receiver
+                             _____
+  .---------.    SMTP       |=====|      POP      .---------.
+  |         |-------------->|     |<--------------|         |
+  |  Alice  |               |     |               |   Bob   |
+  +---------+               |  o  |               +---------+
+ /// _____ \\\              |_____|              /// _____ \\\
+'-------------'                                 '-------------'
+                    +---------------------+
+                    |"To: bob@bar.com"    |
+                    |"From: alice@foo.com"|
+                    |"Body: Hi!"          |
+                    +---------------------+
+</script>   
+
+<br>
+Protocols:
+<br>
+<script type="text/typogram">
++-----+            +-----+
+|  A  |            |  B  |
++--+--+            +--+--+
+   | foo              |
+   |----------------->|
+   | hello            |
+   |----------------->|--+
+   |           world  |  | prompts the user
+   |<-----------------|--+
+   |                  |
+ --+--              --+--
+</script>   
+
+<br>
+Graphic diagrams:
+<br>
+<script type="text/typogram">
+     0       3                         P *              Eye /         ^     /
+     *-------*      +y                    \                +)          \   /  Reflection
+  1 /|    2 /|       ^                     \                \           \ v
+   *-+-----* |       |                v0    \       v3           --------*--------
+   | |4    | |7      | ◄╮               *----\-----*
+   | *-----|-*     ⤹ +-----> +x        /      v X   \                o
+   |/      |/       / ⤴               /        o     \              / \
+   *-------*       v                 /                \            /   \
+  5       6      +z              v1 *------------------* v2       o-----o
+</script>   
+
+<br>
+Plot diagrams:
+<br>
+<script type="text/typogram">
+        ▲
+    Uin :   .------------------------
+        :   |
+        :   |
+        *---'~~~~~~~~~~~~~~~~~~~~~~~~▶
+
+     Udc▲
+Udc_OK  :      .---------------------
+        :     /  :       :
+        :    /   :       :
+        *---'~~~~:~~~~~~~:~~~~~~~~~~~▶
+                 :<----->:
+                   500ms
+        ▲
+        :
+Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
+        :                | Inactive
+        :     Active     |
+        *----------------'~~~~~~~~~~~▶
+</script>   
+
+<br>
+<script>
+customElements.define("typo-gram", class Typogram extends HTMLElement {
+  constructor() {
+    super();
+  }
+  connectedCallback() {
+    console.log("hello");
+    console.log(this.innerHTML);
+  }
+});
+</script>
+
+<typo-gram>
+</typo-gram>
+
