Add more examples

--- a/index.html
+++ b/index.html
@@ -2,6 +2,46 @@
 <link rel="stylesheet" href="typograms.css"></link>
 
 <br>
+Pipes and connectors
+<br>
+<script type="text/typogram">
+  +- -+  -+ +-  |   |   | |   -+-  |    /  \  \     /  +-  -+  +- -+    +   \ /
+  |   |   | |   +- -+  -+ +-   |  -+-  +-  -+  +- -+    \  /  /     \  / \   + 
+
+  .- -.  -. .-  |   |   | |   -.-  |    /  \  \     /  .-  -.  .- -.    .   \ /
+  |   |   | |   '- -'  -' '-   |  -'-  '-  -'  '- -'    \  /  /     \  / \   ' 
+
+   _ _   _   _                ___                       _  _   __ __    _   \ /
+  |   |   | |   |_ _|  _| |_   |  _|_  /_  _\  \_  _/   \  /  /     \  / \   -
+  
+  +~ ~+  ~+ +~  :   :   : :   ~+~  : 
+  :   :   : :   +~ ~+  ~+ +~   :  ~+~
+
+  /   \   |    |           /    \  
+  |   |   \    /   /\  \/  \    /  
+</script>
+
+<br>
+Line endings:
+<br>
+<script type="text/typogram">
+  o-o   *-o   #-o   |  |  |  \ /    \   /     \ / \   /     \ / \   /
+  o-*   *-*   #-*   o  *  #   o  o   o o    *  *   * *    #  #   # #
+  o-#   *-#   #-#   |  |  |     / \ /   \  / \    /   \  / \    /   \
+</script>
+
+<br>
+Arrows:
+<br>
+<script type="text/typogram">
+          |  ^   ^  ^    /  \   \    /   \    /    >  <    <   >
+  ->  <-  v  |  /    \  v    v   >  <    <    >   /    \   /   \
+  
+  >| |< ^ v >o o< ^ v >* *< ^ v ># #< ^ v
+          -         o         *         #  
+</script>
+
+<br>
 Line ends:
 <br>
 <script type="text/typogram">
@@ -63,13 +103,13 @@ Trees:
 Big Shapes:
 <br>
 <script type="text/typogram">
-  +-----------+  ^  +------+        .-----.  +-----+     +----+       +----+
+  +-----------+  +  +------+        .-----.  +-----+     +----+       +----+
    \         /  / \  \      \       |     |  |     |    /      \     /      \
     \       /  /   \  \      \      |     |  |     |   /        \   /        \
      \     /  /     \  \      \     |     |  |     |  +          + |          |
       \   /  /       \  \      \    |     |  |     |   \        /   \        /
        \ /  /         \  \      \   |     |  |     |    \      /     \      /
-        v  +-----------+  +------+  '-----'  +-----+     +----+       +----+
+        +  +-----------+  +------+  '-----'  +-----+     +----+       +----+
 </script>   
 
 <br>
@@ -77,8 +117,8 @@ Small Shapes:
 <br>
 <script type="text/typogram">
    __        ____     ___                     .---. 
-  /  \   /\  \  /  ^  \ /  /\   +-+  +-+ +-+  |   | ++ 
-  \__/  /__\  \/  /_\  v  /  \  +-+ /_/   \_\ '---' ++
+  /  \   /\  \  /  +  \ /  /\   +-+  +-+ +-+  |   | ++ 
+  \__/  /__\  \/  /_\  +  /  \  +-+ /_/   \_\ '---' ++
                          +----+
 </script>   
 
