Add more examples with rounded corners using parenthesis

--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
 Pipes and connectors
 <br>
 <script type="text/typogram">
-  +- -+  -+ +-  |   |   | |   -+-  |    /  \  \     /  +-  -+  +- -+    +   \ /
-  |   |   | |   +- -+  -+ +-   |  -+-  +-  -+  +- -+    \  /  /     \  / \   + 
+  +- -+  -+ +-  |   |   | |   -+-  |    /  \  \     /  +-  -+  +- -+    +   \ /   \   /
+  |   |   | |   +- -+  -+ +-   |  -+-  +-  -+  +- -+    \  /  /     \  / \   +     + +
+                                                                                  /   \
 
-  .- -.  -. .-  |   |   | |   -.-  |    /  \  \     /  .-  -.  .- -.    .   \ /
-  |   |   | |   '- -'  -' '-   |  -'-  '-  -'  '- -'    \  /  /     \  / \   ' 
+  .- -.  -. .-  |   |   | |   -.-  |    /  \  \     /  .-  -.  .- -.    .   \ /   \   /    |  |
+  |   |   | |   '- -'  -' '-   |  -'-  '-  -'  '- -'    \  /  /     \  / \   '     ) (    (    ) 
+                                                                                  /   \    |  |
 
-   _ _   _   _                ___                       _  _   __ __    _   \ /
-  |   |   | |   |_ _|  _| |_   |  _|_  /_  _\  \_  _/   \  /  /     \  / \   -
-  
+   _ _   _   _                ___                       _  _   __ __    _   \ /  \   /
+  |   |   | |   |_ _|  _| |_   |  _|_  /_  _\  \_  _/   \  /  /     \  / \   -    | |
+                                                                                 /   \
+
+                                                                                          
   +~ ~+  ~+ +~  :   :   : :   ~+~  : 
   :   :   : :   +~ ~+  ~+ +~   :  ~+~
 
-  /   \   |    |           /    \  
-  |   |   \    /   /\  \/  \    /  
+  /   \   |    |           /    \
+  |   |   \    /   /\  \/  \    /
+
+  -.   .-  -. .-. .-  .-.
+   '- -'    '-' '-'   '-'
+
+   __   .-. 
+  (__) ( 1 )
+        '-'  
 </script>
 
 <br>
@@ -39,6 +50,17 @@ Arrows:
   
   >| |< ^ v >o o< ^ v >* *< ^ v ># #< ^ v
           -         o         *         #  
+</script>
+
+<br>
+Lines with decorations:
+<br>
+<script type="text/typogram">
+          +----+     o    |          o       *      *   .----------.
+  *-+---. '-* -+-    |    v         ^         \    /    |.--------.|
+    |   '--->   +----+  ->*<-      /   .-+->*<-o--+     |'------> ||
+  <-'       *---+     |<----->|   +----' |  ^   \       '---------'|
+                                         |__|    v      *----------'
 </script>
 
 <br>
@@ -279,6 +301,25 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
         :     Active     |
         *----------------'~~~~~~~~~~~▶
 </script>   
+
+<br>
+Flow charts:
+<br>
+<script type="text/typogram">
+  .-------.                   +
+ (  START  )                 / \       
+  '---+---'                 /   \      +-+---------+-+    ___________
+      |         .---.      /     \     | | COMPLEX | |   /           \
+      v        ( END )<---+CHOICE +--->| |         | |->+ PREPARATION +-> X
+   +-------+    '---'      \     /     | | PROCESS | |   \___________/
+  / INPUT /                 \   /      +-+---------+-+ 
+ +-------+                   \ /
+      |                       +
+      v                       ^
+ +---------+             +----+----+
+ | PROCESS |------------>| PROCESS |<----- x
+ +---------+             +---------+
+</script>
 
 <br>
 <script>
