--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
     <h1 id="introduction">Introduction</h1>
     <h1 id="primitives">Primitives</h1>
     
-    <br>
-    Pipes and connectors
-    <br>
+    <h2>Pipes and connectors</h2>
     <script type="text/typogram">
 
   +- -+  -+ +-  |   |   | |   -+-  |    /  \  \     /  +-  -+  +- -+    +   \ /   \   /
@@ -104,18 +102,14 @@
         '-'                  \  /
     </script>
 
-    <br>
-    Endings:
-    <br>
+    <h2>Endings</h2>
     <script type="text/typogram">
   o-o   *-o   #-o   |  |  |  \ /    \   /     \ / \   /     \ / \   /
   o-*   *-*   #-*   o  *  #   o  o   o o    *  *   * *    #  #   # #
   o-#   *-#   #-#   |  |  |     / \ /   \  / \    /   \  / \    /   \
     </script>
 
-    <br>
-    Arrows:
-    <br>
+    <h2>Arrows</h2>
     <script type="text/typogram">
           |  ^   ^  ^    /  \   \    /   \    /    >  <    <   >
   ->  <-  v  |  /    \  v    v   >  <    <    >   /    \   /   \
