Use a lighther shade of gray for the menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
        padding: 0;
        font-family: Google Sans,Roboto,Arial,Helvetica,sans-serif;
    }
+   .menu a, .menu a:visited, .menu a:hover, .menu a:active {
+       color: inherit;
+       text-decoration: inherit;
+       font-weight: bold;
+       color: #999;
+   }
+   .menu ul {
+       list-style: none;
+   }
    .header {
        box-shadow: 0 2px 6px 0 rgb(0 0 0 / 12%), inset 0 -1px 0 0 #dadce0;
        padding: 1em;
@@ -50,13 +59,13 @@
     <br><br><a href="#installation">Installation</a>
     
     <br><br><a href="#primitives">Primitives</a>
-    <ol>
+    <ul>
       <li><a href="#pipes">Pipes and connectors</a></li>
       <li><a href="#endings">Endings</a></li>
       <li><a href="#arrows">Arrows</a></li>
-    </ol>
+    </ul>
 
-    <br><a href="#examples">Examples</a>
+    <a href="#examples">Examples</a>
     <ul>
       <li><a href="#protocols">Protocols</a></li>
       <li><a href="#icons">Icons</a></li>
