--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <script src="typograms.js"></script>
  <link rel="stylesheet" href="typograms.css"></link>
  <link href="google-sans.css" media="screen" rel="stylesheet" type="text/css">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/a11y-dark.min.css">
  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
  <style>
    html, body, .header {
