Add a better introduction

--- a/index.html
+++ b/index.html
@@ -92,13 +92,15 @@
 
     <h1 id="introduction">Introduction</h1>
 
-    <p>Typograms (typographic diagrams) is an <a href="https://en.wikipedia.org/wiki/ASCII_art">ASCII</a>-oriented image format (<code>text/typograms</code>) useful for defining simple diagrams.</p>
+    <p>Typograms (typographic diagrams) is a lightweight image format (<code>text/typograms</code>) useful for defining simple diagrams in technical documentation.</p>
 
-    <p>It defines a small set of <a href="#primitives">primitives</a> and rules to connect them, which you can use to build larger <a href="#examples">diagrams</a>.</p>
+    <p>Like markdown, typograms is heavily inspired by pre-existing conventions found in <a href="https://en.wikipedia.org/wiki/ASCII_art">ASCII</a> diagrams. A small set of <a href="#primitives">primitives</a> and rules to connect them is defined, which you can use to build larger <a href="#examples">diagrams</a>.</p>
+
+    <p>Typograms optimizes for editability and portability (e.g. plain text is easy to maintain, change, store and transmit), at the cost of expressivity (e.g. SVG is more expressive) and ergonomics (e.g. higher level tools produce diagrams faster).</p>
+    
+    <p>A comparison with <a href="#related">related</a> work is available below.</p>
 
     <p>A <a href="#installation">polyfill</a> is available that allows you use to use it in browsers.</p>
-
-    <p>A comparison with <a href="#related">related</a> work is available below.</p>
 
     <h1 id="installation">Installation</h1>
 
