--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
     From there, you can <a href="https://github.com/samuelgoto/typograms">download</a> the library directly to serve yourself.
     
     <h1 id="primitives">Primitives</h1>
+
+    <p>Typograms are composed of primitives (<a href="#pipes">pipes</a>: <code>| - _ : ~ \ /</code>, <a href="#endings">endings</a>: <code>* o #</code> and <a href="#arrows">arrows</a> <code>< > v ^</code>) and connectors (<code>+ . ' ( )</code>).</p>
+
+    <p>By using them in composition, you can form a lot of different <a href="#examples">diagrams</a>.</p>
     
     <h2 id="pipes">Pipes and connectors</h2>
     <script type="text/typogram">
