Add more examples for how arrows interact with walls

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <li><a href="#scribbles">Scribbles</a></li>
     </ul>
 
-    <a href="#tbd">Known Issues</a>
+    <a href="#wip">Work in Progress</a>
     <br><br><a href="#related">Related</a>
     <br><br><a href="#specification">Specification</a>
   </div>
@@ -162,11 +162,20 @@
 
     <h2 id="arrows">Arrows</h2>
     <script type="text/typogram">
-          |  ^   ^  ^    /  \   \    /   \    /    >  <    <   >
-  ->  <-  v  |  /    \  v    v   >  <    <    >   /    \   /   \
-  
-  >| |< ^ v >o o< ^ v >* *< ^ v ># #< ^ v
-          -         o         *         #  
+
+          |  ^   ^  ^    /  \ 
+  ->  <-  v  |  /    \  v    v
+
+   -  |   _  |            
+   ^  v   ^  v
+   |  -   |  _
+
+                                  ----
+  \ |  | /     ^|  |^   \    /    ^  ^
+   v|  |v     / |  | \   v  v    /    \
+                         ----    
+
+  ->|  |<- ->o  o<-  ->* *<-  -># #<-           
     </script>
 
     <h1 id="examples">Examples</h1>
@@ -430,9 +439,9 @@ A   1    2   4                 8
     </script>   
 
 
-    <h1 id="tbd">Known Issues</h1>
+    <h1 id="wip">WIP</h1>
 
-    <p>This is a list of constructions that we'd like to support but haven't gotten to it quite yet.</p>
+    <p>This is a list of constructions that are currently looking into supporting.</p>
 
     <h2>Parenthesis and spheres</h2>
     
@@ -443,6 +452,12 @@ A   1    2   4                 8
 "   __   .-.    .-.   |   |   /  \    "
 "  (__) ( 1 )  |   |   '-'   +)  (+   "
 "        '-'                  \  /    "
+    </script>
+
+    <h2>Diagonal Side-way Arrows</h2>
+    <script type="text/typogram">
+"  \    /   \    /    >  <    <   >   "
+"   >  <    <    >   /    \   /   \   "
     </script>
     
     <h1 id="related">Related Work</h1>
