Add a mocks section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <a href="#examples">Examples</a>
     <ul>
       <li><a href="#protocols">Protocols</a></li>
+      <li><a href="#mocks">Mocks</a></li>
       <li><a href="#architecture">Architecture</a></li>
       <li><a href="#tables">Tables</a></li>
       <li><a href="#flowcharts">Flowchats</a></li>
@@ -194,6 +195,26 @@
    |                  |
  --+--              --+--
     </script>   
+
+    <h2 id="mocks">Mocks</h2>
+        
+    <script type="text/typogram">
+.------------------------.
+|.----------------------.|
+||"https://example.com" ||
+|'----------------------'|
+| ______________________ |
+||                      ||
+||       Welcome!       ||
+||                      ||
+||                      ||
+||                      ||
+||                      ||
+||                      ||
+||                      ||
+|+----------------------+|
+.------------------------.
+    </script>
 
     <h2 id="architecture">Architecture</h2>
 
