--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
     <br><br><a href="#primitives">Primitives</a>
     <ul>
-      <li><a href="#pipes">Pipes and connectors</a></li>
+      <li><a href="#pipes">Pipes</a></li>
       <li><a href="#endings">Endings</a></li>
       <li><a href="#arrows">Arrows</a></li>
     </ul>
@@ -77,7 +77,7 @@
       <li><a href="#mocks">Mocks</a></li>
       <li><a href="#architecture">Architecture</a></li>
       <li><a href="#tables">Tables</a></li>
-      <li><a href="#flowcharts">Flowchats</a></li>
+      <li><a href="#flowcharts">Flowcharts</a></li>
       <li><a href="#trees">Trees</a></li>
       <li><a href="#shapes">Shapes</a></li>
       <li><a href="#grids">Grids</a></li>
@@ -127,7 +127,7 @@
 
     <p>By using them in composition, you can form a lot of different <a href="#examples">diagrams</a>.</p>
     
-    <h2 id="pipes">Pipes and connectors</h2>
+    <h2 id="pipes">Pipes</h2>
     <script type="text/typogram">
 
   +- -+  -+ +-  |   |   | |   -+-  |    /  \  \     /  +-  -+  +- -+    +   \ /   \   /
