Make dots larger

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <br><br><a href="#primitives">Primitives</a>
     <ul>
       <li><a href="#pipes">Pipes</a></li>
-      <li><a href="#ends">Ends</a></li>
+      <li><a href="#dots">Dots</a></li>
       <li><a href="#arrows">Arrows</a></li>
     </ul>
 
@@ -123,7 +123,7 @@
     
     <h1 id="primitives">Primitives</h1>
 
-    <p>Typograms are composed of primitives (<a href="#pipes">pipes</a>: <code>| - _ : ~ \ /</code>, <a href="#ends">ends</a>: <code>* o #</code> and <a href="#arrows">arrows</a> <code>< > v ^</code>) and connectors (<code>+ . ' ( )</code>).</p>
+    <p>Typograms are composed of primitives (<a href="#pipes">pipes</a>: <code>| - _ : ~ \ /</code>, <a href="#dots">dots</a>: <code>* o #</code> and <a href="#arrows">arrows</a> <code>< > v ^</code>) and connectors (<code>+ . ' ( )</code>).</p>
 
     <p>By using them in composition, you can form a lot of different <a href="#examples">diagrams</a>.</p>
     
@@ -153,7 +153,7 @@
    '- -'    '-' '-'   '-'
     </script>
 
-    <h2 id="ends">Ends</h2>
+    <h2 id="dots">Dots</h2>
     <script type="text/typogram">
   o-o   *-o   #-o   |  |  |  \ /    \   /     \ / \   /     \ / \   /
   o-*   *-*   #-*   o  *  #   o  o   o o    *  *   * *    #  #   # #
