Update the readme with more information

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 &lt;link rel="stylesheet" href="https://code.sgo.to/typograms/typograms.css"&gt;&lt;/link&gt;
 &lt;script type="text/typogram"&gt;
 +----+
-|    |--->* My first diagram!
+|    |---> My first diagram!
 +----+
 &lt;/script&gt;
       </code>
@@ -209,12 +209,19 @@
 |'----------------------'|
 | ______________________ |
 ||                      ||
-||       Welcome!       ||
+||   Welcome!           ||
 ||                      ||
 ||                      ||
+||  .----------------.  ||
+||  | username       |  ||
+||  '----------------'  ||
+||  .----------------.  ||
+||  |"*******"       |  ||
+||  '----------------'  ||
 ||                      ||
-||                      ||
-||                      ||
+||  .----------------.  ||
+||  |   "Sign-up"    |  ||
+||  '----------------'  ||
 ||                      ||
 |+----------------------+|
 .------------------------.
@@ -436,16 +443,16 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
     
     <h3>Line ends</h3>
     <script type="text/typogram">
-o-o *-o   /  /  * o  o o o o  * * * *  o o o o  * * * *     o o o o  * * * *
-o-* *-*  v  v   ^ ^  | | | |  | | | |   \ \ \ \  \ \ \ \   / / / /  / / / /
-o-> *-> *  o    | |  o * v    o * v      o * v    o * v   o * v    o * v  
-o-  *-              
+ o-o *-o   /  /  * o  o o o o  * * * *  o o o o  * * * *     o o o o  * * * * 
+ o-* *-*  v  v   ^ ^  | | | |  | | | |   \ \ \ \  \ \ \ \   / / / /  / / / /
+ o-> *-> *  o    | |  o * v    o * v      o * v    o * v   o * v    o * v  
+ o-  *-              
 
-^ ^  * o  |  |                           ^ ^ ^ ^             ^ ^ ^
-| |  ^ ^  v  v   *  o   ^ ^ ^ ^  | | | |  \ \ \ \  \ \ \ \  / / /  / / / /
-* o       *  o   ^  ^  o * v     o * v     o * v    o * v  o * v  o * v 
+ ^ ^  * o  |  |                           ^ ^ ^ ^             ^ ^ ^
+ | |  ^ ^  v  v   *  o   ^ ^ ^ ^  | | | |  \ \ \ \  \ \ \ \  / / /  / / / /
+ * o       *  o   ^  ^  o * v     o * v     o * v    o * v  o * v  o * v 
   
-<-o <-* <-> <-                   -o -* -> -- *<- o<- ->o ->*
+ <-o <-* <-> <-                   -o -* -> -- *<- o<- ->o ->*
 
     \ | /
  \   vvv   /           \ | /
@@ -459,12 +466,12 @@ o-  *-
 
     <h3>Graph with small nodes</h3>
     <script type="text/typogram">
-A   1    2   4                 8
-*-->o<-->o<--o---------.       o
-         ^   ^         |       ^
-         |   |         v       |
-         o<->*<-->o--->*-->o-->o<-->*
-         3   B    5    C   6   7    D
+ A   1    2   4                 8
+ *-->o<-->o<--o---------.       o
+          ^   ^         |       ^
+          |   |         v       |
+          o<->*<-->o--->*-->o-->o<-->*
+          3   B    5    C   6   7    D
     </script>
 
     <h3>Graphic diagrams</h3>
@@ -482,7 +489,7 @@ A   1    2   4                 8
     </script>   
 
 
-    <h1 id="wip">WIP</h1>
+    <h1 id="wip">Work in Progress</h1>
 
     <p>This is a list of constructions that are currently looking into supporting.</p>
 
