Add more diagram examples

--- a/index.html
+++ b/index.html
@@ -439,6 +439,127 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
     |   '--->   +----+  ->*<-      /   .-+->*<-o--+     |'------> ||
   <-'       *---+     |<----->|   +----' |  ^   \       '---------'|
                                          |__|    v      *----------'
+
+                                   .--->  F
+          A       B      C  D     /
+          *-------*-----*---*----*----->  E
+                   \            ^ \
+                    \          /   '--->  G
+                     B --> C -+
+
+                                  +-----+
+     +----[PWR]-------------------| USB |--+
+     |                            +-----+  |
+     |         GND/RST2  [ ][ ]            |
+     |       MOSI2/SCK2  [ ][ ]  A5/SCL[ ] |   C5 
+     |          5V/MISO2 [ ][ ]  A4/SDA[ ] |   C4 
+     |                             AREF[ ] |
+     |                              GND[ ] |
+     | [ ]N/C                    SCK/13[ ] |   B5
+     | [ ]IOREF                 MISO/12[ ] |  "."
+     | [ ]RST                   MOSI/11[ ]~|  "."
+     | [ ]3V3    +---+               10[ ]~|  "."
+     | [ ]5v     | A |                9[ ]~|  "."
+     | [ ]GND   -| R |-               8[ ] |   B0
+     | [ ]GND   -| D |-                    |
+     | [ ]Vin   -| U |-               7[ ] |   D7
+     |          -| I |-               6[ ]~|  "."
+     | [ ]A0    -| N |-               5[ ]~|  "."
+     | [ ]A1    -| O |-               4[ ] |  "."
+     | [ ]A2     +---+           INT1/3[ ]~|  "."
+     | [ ]A3                     INT0/2[ ] |  "."
+     | [ ]A4/SDA  RST SCK MISO     TX>1[ ] |  "."
+     | [ ]A5/SCL  [ ] [ ] [ ]      RX<0[ ] |   D0
+     |            [ ] [ ] [ ]              |
+     |  UNO_R3    GND MOSI 5V   ___________|
+     |_________________________| 
+
+
+Linux
+ +--Android
+ +--Debian
+ |   +--Ubuntu
+ |   |   +--Lubuntu
+ |   |   +--Kubuntu
+ |   |   +--Xubuntu
+ |   |   `--Xubuntu
+ |   `--Mint
+ +--Centos
+ `--Fedora
+
+ o-> Mindmaps
+
+                                            .-->  Alpha
+                                           /
+                                          .---->  Initial Release
+          Planning *-------.             /         \
+                            \           /           '---> Patch 1
+      Initial research       \         /             \
+                *             \       /               '-->  Patch 2
+                 \             \     /---------> Beta
+                  \             \   /
+                   \             o o                      _______
+                    \          .---. *--.___             /       \
+                     '------>  |   |        '------o->  . Release .
+                               `---' o                   \_______/
+                               o  o o \
+                              /    \ \ \
+                          .--'      \ \ \
+                         /           \ \ '----+->  Push backs
+                        /             \ \      \
+                       /|              \ \      '----> Setbacks
+                      / |               \ \
+                     V /|                \ '-----> Reception
+                Team  / |                 \
+                     v /|                  \
+             Worklaod / .                   '-->> Career change
+                     V /
+                 PTO  /
+                     V
+                 Bug
+
+
+ o->  It can do complex stuff such as circuit diagrams
+
+
+      "+10-15V"          ___0,047R
+      *---------o-----o-|___|-o--o---------o----o-------.
+   "+"|         |     |       |  |         |    |       |
+    -===-      _|_    |       | .+.        |    |       |
+    -===-      .-.    |       | | | 2k2    |    |       |
+    -===-    470|"+"  |       | | |        |    |      _|_
+   "-"|       uF|     '--.    | '+'       .+.   |      \ / LED
+      +---------o        |6   |7 |8    1k | |   |      -+-
+             ___|___   .-+----+--+--.     | |   |       |
+              -═══-    |            |     '+'   |       |
+                -      |            |1     |  |/  BC    |
+               GND     |            +------o--+   547   |
+                       |            |      |  |`>       |
+                       |            |     .+.   |       |
+               .-------+            | 220R| |   o----||-+  IRF9Z34
+               |       |            |     | |   |    |+->
+               |       |  MC34063   |     `+'   |    ||-+
+               |       |            |      |    |       |  BYV29     -12V6
+               |       |            |      '----'       o--|<-o----o--X OUT
+ 6000 micro "-"|"+"    |            |2                  |     |    |
+ Farad, 40V ___|_____  |            |--o                C|    |    |
+ Capacitor  ~ ~ ~ ~ ~  |            | GND         30uH  C|    |   --- 470
+               |       |            |3      1nF         C|    |   ###  uF
+               |       |            |-------||--.       |     |    | +
+               |       '-----+----+-'           |      GND    |   GND
+               |            5|   4|             |             |
+               |             |    '-------------o-------------o
+               |             |                           ___  |
+               `-------------*------/\/\/------------o--|___|-'
+                                     2k              |       1k0
+                                                    .+.
+                                                    | | 5k6 + 3k3
+                                                    | | in Serie
+                                                    '+'
+                                                     |
+                                                    GND
+
+                                         
     </script>
     
     <h3>Line ends</h3>
