--- a/index.html
+++ b/index.html
@@ -311,6 +311,19 @@
 1    2 3    4  1   2   3   4        +-- 4        '-- 4     \ 4
 
 
+Linux
+ +--Android
+ +--Debian
+ |   +--Ubuntu
+ |   |   +--Lubuntu
+ |   |   +--Kubuntu
+ |   |   +--Xubuntu
+ |   |   `--Xubuntu
+ |   `--Mint
+ +--Centos
+ `--Fedora
+
+      
     X            Y
    / \          / \
   A   Y   ->   X   C
@@ -430,6 +443,35 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
         *----------------'~~~~~~~~~~~▶
      </script>   
 
+    <h2 id="chips">Chips</h2>
+    <script type="text/typogram">
+                                  +-----+
+     +----[PWR]-------------------| USB |--+
+     |                            +-----+  |
+     |        "GND/RST2" [ ][ ]            |
+     |     "MOSI2/SCK2"  [ ][ ]"A5/SCL"[ ] |   C5 
+     |        "5V/MISO2" [ ][ ]"A4/SDA"[ ] |   C4 
+     |                            AREF [ ] |
+     |                             GND [ ] |
+     | [ ]"N/C"                "SCK/13"[ ] |   B5
+     | [ ] IOREF              "MISO/12"[ ] |  "."
+     | [ ] RST                "MOSI/11"[ ]~|  "."
+     | [ ] 3V3   +---+              10 [ ]~|  "."
+     | [ ] 5v    | A |               9 [ ]~|  "."
+     | [ ] GND  -| R |-              8 [ ] |   B0
+     | [ ] GND  -| D |-                    |
+     | [ ] Vin  -| U |-              7 [ ] |   D7
+     |          -| I |-              6 [ ]~|  "."
+     | [ ] A0   -| N |-              5 [ ]~|  "."
+     | [ ] A1   -| O |-              4 [ ] |  "."
+     | [ ] A2    +---+         "INT1/3"[ ]~|  "."
+     | [ ] A3                  "INT0/2"[ ] |  "."
+     | [ ]"A4/SDA"RST SCK MISO   "TX>1"[ ] |  "."
+     | [ ]"A5/SCL"[ ] [ ] [ ]    "RX<0"[ ] |   D0
+     |            [ ] [ ] [ ]              |
+     | "UNO_R3"   GND MOSI 5V   ___________|
+     |_________________________| 
+    </script>
 
     <h2 id="scribbles">Scribbles</h2>
     <h3>Lines with decorations</h3>
@@ -447,47 +489,6 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
                     \          /   '--->  G
                      B --> C -+
 
-                                  +-----+
-     +----[PWR]-------------------| USB |--+
-     |                            +-----+  |
-     |         GND/RST2  [ ][ ]            |
-     |       MOSI2/SCK2  [ ][ ]  A5/SCL[ ] |   C5 
-     |          5V/MISO2 [ ][ ]  A4/SDA[ ] |   C4 
-     |                             AREF[ ] |
-     |                              GND[ ] |
-     | [ ]N/C                    SCK/13[ ] |   B5
-     | [ ]IOREF                 MISO/12[ ] |  "."
-     | [ ]RST                   MOSI/11[ ]~|  "."
-     | [ ]3V3    +---+               10[ ]~|  "."
-     | [ ]5v     | A |                9[ ]~|  "."
-     | [ ]GND   -| R |-               8[ ] |   B0
-     | [ ]GND   -| D |-                    |
-     | [ ]Vin   -| U |-               7[ ] |   D7
-     |          -| I |-               6[ ]~|  "."
-     | [ ]A0    -| N |-               5[ ]~|  "."
-     | [ ]A1    -| O |-               4[ ] |  "."
-     | [ ]A2     +---+           INT1/3[ ]~|  "."
-     | [ ]A3                     INT0/2[ ] |  "."
-     | [ ]A4/SDA  RST SCK MISO     TX>1[ ] |  "."
-     | [ ]A5/SCL  [ ] [ ] [ ]      RX<0[ ] |   D0
-     |            [ ] [ ] [ ]              |
-     |  UNO_R3    GND MOSI 5V   ___________|
-     |_________________________| 
-
-
-Linux
- +--Android
- +--Debian
- |   +--Ubuntu
- |   |   +--Lubuntu
- |   |   +--Kubuntu
- |   |   +--Xubuntu
- |   |   `--Xubuntu
- |   `--Mint
- +--Centos
- `--Fedora
-
- o-> Mindmaps
 
                                             .-->  Alpha
                                            /
@@ -498,10 +499,10 @@ Linux
                 *             \       /               '-->  Patch 2
                  \             \     /---------> Beta
                   \             \   /
-                   \             o o                      _______
-                    \          .---. *--.___             /       \
-                     '------>  |   |        '------o->  . Release .
-                               `---' o                   \_______/
+                   \             o o                     _______
+                    \          .---. *-----.            /       \
+                     '------>  |   |       '------o->  . Release .
+                               `---' o                  \_______/
                                o  o o \
                               /    \ \ \
                           .--'      \ \ \
@@ -613,6 +614,11 @@ Linux
     <h1 id="wip">Work in Progress</h1>
 
     <p>This is a list of constructions that are currently looking into supporting.</p>
+
+    <h2>Small curved steps</h2>
+    <script type="text/typogram">
+"      -._ _.-                        "
+    </script>
 
     <h2>Parenthesis and spheres</h2>
     
